--- a/1-node-farm/package.json
+++ b/1-node-farm/package.json
@@ -10,6 +10,7 @@
   "author": "kuka",
   "license": "ISC",
   "dependencies": {
+    "express": "4.18.2",
     "slugify": "1.6.5"
   },
   "devDependencies": {
