--- a/4-natours/starter/.eslintrc.json
+++ b/4-natours/starter/.eslintrc.json
@@ -13,7 +13,8 @@
     "no-return-await": "off",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
+    "import/no-dynamic-require": "off",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }]
+    "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val|_" }]
   }
 }
