add ndb debugger

--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon server.js",
     "upload:data": "node ./dev-data/data/import-dev-data.js --import",
     "delete:data": "node ./dev-data/data/import-dev-data.js --delete",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
+    "ndb": "1.1.5",
     "parcel-bundler": "1.12.3",
     "prettier": "1.17.0"
   },
