--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -11,7 +11,7 @@
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
-  "author": "",
+  "author": "Honcharov Anton",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -26,7 +26,7 @@
     "morgan": "1.10.0",
     "nodemailer": "6.9.1",
     "nodemon": "2.0.20",
-    "pug": "^3.0.2",
+    "pug": "3.0.2",
     "slugify": "1.6.5",
     "validator": "13.7.0",
     "xss-clean": "0.1.1"
