--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -9,11 +9,15 @@
     "upload:data": "node ./dev-data/data/import-dev-data.js --import",
     "delete:data": "node ./dev-data/data/import-dev-data.js --delete",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js  --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js  --out-file bundle.js"
   },
   "author": "Honcharov Anton",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "7.12.1",
+    "axios": "1.3.3",
     "bcryptjs": "2.4.3",
     "cookie-parser": "1.4.6",
     "dotenv": "16.0.3",
@@ -23,6 +27,7 @@
     "helmet": "6.0.1",
     "hpp": "0.2.3",
     "jsonwebtoken": "9.0.0",
+    "mapbox-gl": "2.12.1",
     "mongoose": "5.13.15",
     "morgan": "1.10.0",
     "nodemailer": "6.9.1",
