--- a/4-natours/starter/package.json
+++ b/4-natours/starter/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "6.9.1",
     "nodemon": "2.0.20",
     "pug": "3.0.2",
+    "sharp": "0.31.3",
     "slugify": "1.6.5",
     "validator": "13.7.0",
     "xss-clean": "0.1.1"
